--- a/registera.html
+++ b/registera.html
@@ -126,7 +126,7 @@
                     <button type="submit" class="btn btn-dark btn-block">Sign Up</button>
                 </div>
                 <div class="form-group">
-                    <h4>Already have an account!<a href="Login.html">Log In</a></h4>
+                    <h4>Already have an account!<a href="index.html">Log In</a></h4>
                 </div>
             </form>
         </div>
